<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:id="@+id/parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/yloop"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Manager" >

    <EditText
        android:id="@+id/bill"
        style="@style/AppTheme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bill"
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/totalBill"
        android:inputType="number"
        android:padding="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >
    </EditText>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bill"
        android:layout_marginTop="5dp" >

        <ImageButton
            android:id="@+id/bminusppl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/minusPpl"
            android:src="@drawable/minus" />

        <EditText
            android:id="@+id/numOfPpl"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="number"
            android:padding="@dimen/activity_horizontal_margin"
            android:hint="@string/howManyPpl"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <requestFocus />
        </EditText>

        <ImageButton
            android:id="@+id/bplusppl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/plusPpl"
            android:src="@drawable/plus" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll1"
        android:layout_marginTop="5dp" >

        <ImageButton
            android:id="@+id/bminustip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/minusPpl"
            android:src="@drawable/minus" />

        <EditText
            android:id="@+id/percent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:hint="@string/howMuchTip"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#FFFFFF"
            android:imeOptions="actionDone"
            android:ems="10"
            android:inputType="number"
            android:padding="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" />

        <ImageButton
            android:id="@+id/bplustip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/plusPpl"
            android:src="@drawable/plus" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll2"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/totalPerOne"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txt1ans"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt1"
        android:background="#C0C0C0"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt1ans"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/totalPay"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txt2ans"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt2"
        android:background="#C0C0C0"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
        
    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt2ans"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/totalTip"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txt3ans"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt3"
        android:background="#C0C0C0"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <LinearLayout
        android:id="@+id/loadd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:minHeight="50dp" >

    </LinearLayout>

</RelativeLayout>